updated the `prior` and `ggplot()` code

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output:
 
 # Robust Linear Regression with Student’s T Distribution
 
-The purpose of this project is to demonstrate the advantages of the Student's t distribution for regression with outliers, particularly within a [Bayesian framework](https://www.youtube.com/channel/UCNJK6_DZvcMqNSzQdEkzvzA/playlists).
+The purpose of this project is to demonstrate the advantages of the Student's $t$ distribution for regression with outliers, particularly within a [Bayesian framework](https://www.youtube.com/channel/UCNJK6_DZvcMqNSzQdEkzvzA/playlists).
 
 For this project, I’m presuming you are familiar with linear regression, familiar with the basic differences between frequentist and Bayesian approaches to fitting regression models, and have a sense that the issue of outlier values is a pickle worth contending with. All code in is [R](https://www.r-bloggers.com/why-use-r-five-reasons/), with a heavy use of the [tidyverse](http://style.tidyverse.org)--which you might learn a lot about [here, especially chapter 5](http://r4ds.had.co.nzhttp://r4ds.had.co.nz)--, and the [brms](https://cran.r-project.org/web/packages/brms/index.html) package.
 
@@ -14,40 +14,35 @@ For this project, I’m presuming you are familiar with linear regression, famil
 
 Regression models typically use the Gaussian likelihood. The Gaussian likelihood is a sensible default choice for many data types. Unfortunately, the normal (i.e., Gaussian) distribution is sensitive to outliers. 
 
-The normal distribution is a special case of Student's t distribution with the *nu* parameter (i.e., the degree of freedom) set to infinity. However, when *nu* is small, Student's t distribution is more robust to multivariate outliers. See [Gelman & Hill (2007, chapter 6)](http://www.stat.columbia.edu/~gelman/arm/) or [Kruschke (2014, chapter 16)](https://sites.google.com/site/doingbayesiandataanalysis/) for textbook treatments on the topic.
+The normal distribution is a special case of Student's $t$ distribution with the *nu* parameter (i.e., the degree of freedom) set to infinity. However, when *nu* is small, Student's $t$ distribution is more robust to multivariate outliers. See [Gelman & Hill (2007, chapter 6)](http://www.stat.columbia.edu/~gelman/arm/) or [Kruschke (2014, chapter 16)](https://sites.google.com/site/doingbayesiandataanalysis/) for textbook treatments on the topic.
 
-In this project, we demonstrate how vulnerable the Gaussian likelihood is to outliers and then compare it too different ways of using Student's t likelihood for the same data.
+In this project, we demonstrate how vulnerable the Gaussian likelihood is to outliers and then compare it too different ways of using Student's $t$ likelihood for the same data.
 
 First, we'll get a sense of the distributions with a plot.
 
-```{r, fig.width = 5, fig.height = 3.5, warning = F, message = F}
+```{r, fig.width = 5.5, fig.height = 3.25, warning = F, message = F}
 library(tidyverse)
-library(viridis)
 
-ggplot(data = tibble(x = seq(from = -6, to = 6, by = .01)), aes(x = x)) +
-  geom_line(aes(y = dnorm(x))) +
-  geom_line(aes(y = dt(x, df = 10)),  # note how we've defined df by nu (i.e., df)
-            color = viridis_pal(direction = 1, option = "C")(6)[2]) +
-  geom_line(aes(y = dt(x, df = 5)),   # note how we've defined df by nu 
-            color = viridis_pal(direction = 1, option = "C")(6)[3]) +
-  geom_line(aes(y = dt(x, df = 2.5)), # note how we've defined df by nu 
-            color = viridis_pal(direction = 1, option = "C")(6)[4]) +
-  geom_line(aes(y = dt(x, df = 1)),   # note how we've defined df by nu 
-            color = viridis_pal(direction = 1, option = "C")(6)[5]) +
+tibble(x = seq(from = -6, to = 6, by = .01)) %>% 
+  expand(x, nu = c(1, 2.5, 5, 10, Inf)) %>% 
+  mutate(density = dt(x = x, df = nu),
+         nu      = factor(nu, levels = c("Inf", "10", "5", "2.5", "1"))) %>% 
+  
+  ggplot(aes(x = x, y = density, group = nu, color = nu)) +
+  geom_line() +
+  scale_color_viridis_d(expression(nu),
+                        direction = 1, option = "C", end = .85) +
   scale_y_continuous(NULL, breaks = NULL) +
   coord_cartesian(xlim = -5:5) +
-  labs(subtitle = "Gauss is in black. Student's t with nus of 10, 5, 2.5, and 1 range from purple to\norange.",
-       x = NULL) +
+  xlab(NULL) +
   theme(panel.grid = element_blank())
 ```
 
-[Asside: In this document, we make use of the handy [viridis package](https://cran.r-project.org/web/packages/viridis/vignettes/intro-to-viridis.html) for our color paletes.]
-
-So the difference is that a Student's t with a low *nu* will have notably heavier tails than the conventional Gaussian distribution. It’s easiest to see the difference when *nu* approaches 1. Even then, the difference can be subtle when looking at a plot. Another way is to compare how probable relatively extreme values are in a Student's t distribution relative to the Gaussian. For the sake of demonstration, here we'll compare Gauss with Student's t with a *nu* of 5. In the plot above, they are clearly different, but not shockingly so. However, that difference is very notable in the tails.
+So the difference is that a Student's $t$ with a low *nu* will have notably heavier tails than the conventional Gaussian distribution. It’s easiest to see the difference when *nu* approaches 1. Even then, the difference can be subtle when looking at a plot. Another way is to compare how probable relatively extreme values are in a Student's $t$ distribution relative to the Gaussian. For the sake of demonstration, here we'll compare Gauss with Student's $t$ with a *nu* of 5. In the plot above, they are clearly different, but not shockingly so. However, that difference is very notable in the tails.
 
 Let’s look closer with our table.
 
-In the table, below, we compare the probability of a given Z score or lower within the Gaussian and a *nu* = 5 Student's t. In the rightmost column, we compare the probabilities in a ratio.
+In the table, below, we compare the probability of a given Z score or lower within the Gaussian and a *nu* = 5 Student's $t$. In the rightmost column, we compare the probabilities in a ratio.
 
 ```{r}
 # Here we pic our nu
@@ -60,7 +55,7 @@ tibble(Z_score               = 0:-5,
   mutate_if(is.double, round, digits = 5)
 ```
 
-Note how low Z scores are more probable in this Student’s t than in the Gaussian. This is most apparent in the `Student/Gauss ratio` column on the right. A consequence of this is that extreme scores are less influential to your solutions when you use a small-*nu* Student’s t distribution in place of the Gaussian. That is, the small-*nu* Student’s t is more robust than the Gaussian to unusual and otherwise influential observations.
+Note how low Z scores are more probable in this Student’s $t$ than in the Gaussian. This is most apparent in the `Student/Gauss ratio` column on the right. A consequence of this is that extreme scores are less influential to your solutions when you use a small-*nu* Student’s $t$ distribution in place of the Gaussian. That is, the small-*nu* Student’s $t$ is more robust than the Gaussian to unusual and otherwise influential observations.
 
 In order to demonstrate, let's simulate our own. We'll start by creating multivariate normal data.
 
@@ -88,10 +83,8 @@ With means of `0` and variances of `1`, our data are in a standardized metric.
 Third, we'll use the `mvrnorm()` function from the [MASS package](https://cran.r-project.org/web/packages/MASS/index.html) to simulate our data.
 
 ```{r, warning = F, message = F}
-library(MASS)
-
 set.seed(3)
-d <- mvrnorm(n = 100, mu = m, Sigma = s) %>%
+d <- MASS::mvrnorm(n = 100, mu = m, Sigma = s) %>%
   as_tibble() %>%
   rename(y = V1, x = V2)
 ```
@@ -170,7 +163,7 @@ ggplot(data = d, aes(x = x, y = y)) +
 ggplot(data = o, aes(x = x, y = y, color = y > 3)) +
   stat_smooth(method = "lm", color = "grey92", fill = "grey67", alpha = 1, fullrange = T) +
   geom_point(size = 1, alpha = 3/4) +
-  scale_color_manual(values = c("black", viridis_pal(direction = 1, option = "C")(7)[4])) +
+  scale_color_viridis_d(option = "A", end = 4/7) +
   scale_x_continuous(limits = c(-4, 4)) +
   coord_cartesian(xlim = -3:3, 
                   ylim = -3:5) +
@@ -190,7 +183,7 @@ aug1 <- augment(fit1)
 glimpse(aug1)
 ```
 
-Here we can compare the observations with Cook's distance, *D~i~*  (i.e., `.cooksd`). Cook's *D~i~* is a measure of the influence of a given observation on the model. To compute *D~i~*, the model is fit once for each *n* case, after first dropping that case. Then the difference in the model with all observations and the model with all observations but the *i*th observation, as defined by the Euclidian distance between the estimators. [Fahrmeir et al (2013, p. 166)](http://www.springer.com/us/book/9783642343322#aboutBook) suggest that within the OLS framework "as a rule of thumb, observations with *D~i~* > 0.5 are worthy of attention, and observations with *D~i~* > 1 should always be examined." Here we plot *D~i~* against our observation index, *i*, for both models.
+Here we can compare the observations with Cook's distance, $D_i$  (i.e., `.cooksd`). Cook's $D_i$ is a measure of the influence of a given observation on the model. To compute $D_i$, the model is fit once for each *n* case, after first dropping that case. Then the difference in the model with all observations and the model with all observations but the $i$th observation, as defined by the Euclidian distance between the estimators. [Fahrmeir et al (2013, p. 166)](http://www.springer.com/us/book/9783642343322#aboutBook) suggest that within the OLS framework "as a rule of thumb, observations with $D_i$ > 0.5 are worthy of attention, and observations with $D_i$ > 1 should always be examined." Here we plot $D_i$ against our observation index, $i$, for both models.
 
 ```{r, fig.width = 8, fig.height = 3}
 aug0 %>%  # The well-behaived data
@@ -215,9 +208,9 @@ aug0 %>%  # The well-behaived data
     facet_wrap(~fit)
 ```
 
-For the model of the well-behaved data, `fit0`, we have *D~i~* values all hovering near zero. However, the plot for `fit1` shows one *D~i~* value well above the 0.5 level and another not quite that high but deviant relative to the rest. Our two outlier values look quite influential for the results of `fit1`.
+For the model of the well-behaved data, `fit0`, we have $D_i$* values all hovering near zero. However, the plot for `fit1` shows one $D_i$ value well above the 0.5 level and another not quite that high but deviant relative to the rest. Our two outlier values look quite influential for the results of `fit1`.
 
-## Switching to a Bayesian framework
+## Switch to a Bayesian framework
 
 In this project, we'll use the [brms package](https://cran.r-project.org/web/packages/brms/index.html) to fit our Bayesian regression models. You can learn a lot about brms [here](https://cran.r-project.org/web/packages/brms/vignettes/brms_overview.pdf) and [here](https://github.com/paul-buerkner/brms). To keep things simple, we'll use [weakly-regularizing priors](https://github.com/stan-dev/stan/wiki/Prior-Choice-Recommendations).
 
@@ -225,7 +218,7 @@ In this project, we'll use the [brms package](https://cran.r-project.org/web/pac
 library(brms)
 ```
 
-### Sticking with Gauss.
+### Stick with Gauss.
 
 For our first two Bayesian models, `b0` and `b1`, we'll use the conventional Gaussian likelihood (i.e., `family = gaussian` in the `brm()` function). Like with `fit01`, above, the first model is based on the nice `d` data. The second, `b1`, is based on the more-difficult `o` data.
 
@@ -233,16 +226,13 @@ For our first two Bayesian models, `b0` and `b1`, we'll use the conventional Gau
 b0 <- 
   brm(data = d, family = gaussian,
       y ~ 1 + x,
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+      prior = c(prior(normal(0, 100), class = Intercept),
+                prior(normal(0, 10),  class = b),
+                prior(cauchy(0, 1),   class = sigma)))
 
 b1 <- 
-  brm(data = o, family = gaussian,
-      y ~ 1 + x,
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+  update(b0, 
+         newdata = o)
 ```
 
 Here are the model summaries.
@@ -329,24 +319,16 @@ So with `b0`--the model based on the well-behaved multivariate normal data, `d`-
 
 #### What do we do with those overly-influential outlying values?
 
-A typical way to handle outlying values is to delete them based on some criterion, such as the Mahalanobis distance, Cook's *D~i~*, or our new friend the `pareto_k`. In our next two models, we'll do that. In our `data` arguments, we can use the `slice()` function to omit cases. In model `b1.1`, we simply omit the first and most influential case. In model `b1.2`, we omitted both unduly-influential cases, the values from rows 1 and 2.
+A typical way to handle outlying values is to delete them based on some criterion, such as the Mahalanobis distance, Cook's $D_i$, or our new friend the `pareto_k`. In our next two models, we'll do that. In our `data` arguments, we can use the `slice()` function to omit cases. In model `b1.1`, we simply omit the first and most influential case. In model `b1.2`, we omitted both unduly-influential cases, the values from rows 1 and 2.
 
 ```{r, message = F, results = 'hide'}
 b1.1 <- 
-  brm(data = o %>% slice(2:100), 
-      family = gaussian,
-      y ~ 1 + x,
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+  update(b1, 
+         newdata = o %>% slice(2:100))
 
 b1.2 <- 
-  brm(data = o %>% slice(3:100), 
-      family = gaussian,
-      y ~ 1 + x,
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+  update(b1, 
+         newdata = o %>% slice(3:100))
 ```
 
 Here are the summaries for our models based on the `slice[d]` data.
@@ -356,48 +338,53 @@ tidy(b1.1) %>% slice(1:3) %>% mutate_if(is.double, round, digits = 2)
 tidy(b1.2) %>% slice(1:3) %>% mutate_if(is.double, round, digits = 2)
 ```
 
-They are closer to the true data generating model (i.e., the code we used to make `d`), especially `b1.2`. However, there are other ways to handle the influential cases without dropping them. Finally, we're ready to switch to Student's t!
+They are closer to the true data generating model (i.e., the code we used to make `d`), especially `b1.2`. However, there are other ways to handle the influential cases without dropping them. Finally, we're ready to switch to Student's $t$!
 
-### Time to leave Gauss for the more general Student's t
+### Time to leave Gauss for the more general Student's $t$
 
-Recall that the normal distribution is equivalent to a Student's t with the degrees of freedom parameter, *nu*, set to infinity. That is, *nu* is fixed. Here we'll relax that assumption and estimate *nu* from the data just like we estimate *mu* with the linear model and *sigma* as the residual spread. Since *nu*'s now a parameter, we'll have to give it a prior. For our first Student's t model, we'll estimate *nu* with the brms default gamma(2, 0.1) prior.
+Recall that the normal distribution is equivalent to a Student's $t$ with the degrees of freedom parameter, *nu*, set to infinity. That is, *nu* is fixed. Here we'll relax that assumption and estimate *nu* from the data just like we estimate *mu* with the linear model and *sigma* as the residual spread. Since *nu*'s now a parameter, we'll have to give it a prior. For our first Student's $t$ model, we'll estimate *nu* with the brms default gamma(2, 0.1) prior.
 
 ```{r, message = F, results = 'hide'}
 b2 <- 
   brm(data = o, family = student,
       y ~ 1 + x,
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("gamma(2, 0.1)",  class = "nu"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+      prior = c(prior(normal(0, 100), class = Intercept),
+                prior(normal(0, 10),  class = b),
+                prior(gamma(2, 0.1),  class = nu),
+                prior(cauchy(0, 1),   class = sigma)))
 ```
 
 For the next model, we'll switch out that weak gamma(2, 0.1) for a stronger gamma(4, 1). In some disciplines, the gamma distribution is something of an exotic bird. So before fitting the model, it might be useful to take a peek at what these gamma priors looks like. In the plot, below, the orange density in the background is the default gamma(2, 0.1) and the purple density in the foreground is the stronger gamma(4, 1).
 
 ```{r, fig.width = 8, fig.height = 2.5}
+# data
 tibble(x = seq(from = 0, to = 60, by = .1)) %>% 
-  ggplot(aes(x = x)) +
-  geom_ribbon(aes(ymin = 0, 
-                  ymax = dgamma(x, 2, 0.1)),
-              fill = viridis_pal(direction = 1, option = "C")(5)[4], alpha = 3/4) +
-  geom_ribbon(aes(ymin = 0, 
-                  ymax = dgamma(x, 4, 1)),
-              fill = viridis_pal(direction = 1, option = "C")(5)[2], alpha = 3/4) +
+  expand(x, nesting(alpha = c(2, 4), 
+                    beta  = c(0.1, 1))) %>% 
+  mutate(density = dgamma(x, alpha, beta),
+         group   = rep(letters[1:2], times = n() / 2)) %>% 
+  
+  # plot
+  ggplot(aes(x = x, ymin = 0, ymax = density, 
+             group = group, fill = group)) +
+  geom_ribbon(size = 0, alpha = 3/4) +
+  scale_fill_viridis_d(option = "B", direction = -1, 
+                       begin = 1/3, end = 2/3) +
   scale_y_continuous(NULL, breaks = NULL) +
   coord_cartesian(xlim = 0:50) +
-  theme(panel.grid = element_blank())
+  theme(panel.grid      = element_blank(),
+        legend.position = "none")
 ```
 
 So the default prior is centered around values in the 2 to 30 range, but has a long gentle-sloping tail, allowing the model to yield much larger values for *nu*, as needed. The prior we use below is almost entirely concentrated in the single-digit range. In this case, that will preference Student's t likelihoods with very small *nu* parameters and correspondingly thick tails--easily allowing for extreme values.
 
 ```{r, message = F, results = 'hide'}
 b3 <- 
-  brm(data = o, family = student,
-      y ~ 1 + x,
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("gamma(4, 1)",    class = "nu"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+  update(b2,
+         prior = c(prior(normal(0, 100), class = Intercept),
+                   prior(normal(0, 10),  class = b),
+                   prior(gamma(4, 1),    class = nu),
+                   prior(cauchy(0, 1),   class = sigma)))
 ```
 
 For our final model, we'll fix the *nu* parameter in a `bf()` statement.
@@ -406,26 +393,22 @@ For our final model, we'll fix the *nu* parameter in a `bf()` statement.
 b4 <-
   brm(data = o, family = student,
       bf(y ~ 1 + x, nu = 4),
-      prior = c(set_prior("normal(0, 100)", class = "Intercept"),
-                set_prior("normal(0, 10)",  class = "b"),
-                set_prior("cauchy(0, 1)",   class = "sigma")))
+      prior = c(prior(normal(0, 100), class = Intercept),
+                prior(normal(0, 10),  class = b),
+                prior(cauchy(0, 1),   class = sigma)))
 ```
 
 Now we've got all those models, we can gather their results into a sole tibble.
 
 ```{r}
-# We have to detach MASS and reload tidyverse so we might use tidyverse::select()
-detach(package:MASS, unload = T)
-library(tidyverse)
-
 b_estimates <-
   tidy(b0) %>%
-  bind_rows(tidy(b1)) %>%
-  bind_rows(tidy(b1.1)) %>%
-  bind_rows(tidy(b1.2)) %>%
-  bind_rows(tidy(b2)) %>%
-  bind_rows(tidy(b3)) %>%
-  bind_rows(tidy(b4)) %>%
+  bind_rows(tidy(b1),
+            tidy(b1.1),
+            tidy(b1.2),
+            tidy(b2),
+            tidy(b3),
+            tidy(b4)) %>%
   filter(term %in% c("b_Intercept", "b_x")) %>%
   mutate(model = rep(c("b0", "b1", "b1.1", "b1.2", "b2", "b3", "b4"), each = 2)) %>%
   select(model, everything()) %>%
@@ -446,21 +429,21 @@ b_estimates %>%
   filter(term == "b_x") %>% # b_Intercept b_x
   
   ggplot(aes(x = model)) +
-  geom_pointrange(aes(y = estimate,
+  geom_pointrange(aes(y    = estimate,
                       ymin = lower,
                       ymax = upper),
                   shape = 20) +
   coord_flip(ylim = c(-.2, 1)) +
-  labs(title = "The x slope, varying by model",
+  labs(title    = "The x slope, varying by model",
        subtitle = "The dots are the posterior means and the lines the percentile-based 95% intervals.",
-       x = NULL,
-       y = NULL) +
-  theme(panel.grid = element_blank(),
+       x        = NULL,
+       y        = NULL) +
+  theme(panel.grid   = element_blank(),
         axis.ticks.y = element_blank(),
-        axis.text.y = element_text(hjust = 0))
+        axis.text.y  = element_text(hjust = 0))
 ```
 
-You might think of the `b0` slope as the "true" slope. That's the one estimated from the well-behaved multivariate normal data, `d`. That estimate's just where we'd want it to be. The `b1` slope is a disaster--way lower than the others. The slopes for `b1.1` and `b1.2` get better, but at the expense of deleting data. All three of our Student's t models produced slopes that were pretty close to the `b0` slope. They weren't perfect, but, all in all, Students t did pretty okay.
+You might think of the `b0` slope as the "true" slope. That's the one estimated from the well-behaved multivariate normal data, `d`. That estimate's just where we'd want it to be. The `b1` slope is a disaster--way lower than the others. The slopes for `b1.1` and `b1.2` get better, but at the expense of deleting data. All three of our Student's $t$ models produced slopes that were pretty close to the `b0` slope. They weren't perfect, but, all in all, Students $t$ did pretty okay.
 
 ### We need more LOO and more `pareto_k`.
 
@@ -479,34 +462,35 @@ loo_b1$diagnostics$pareto_k %>%
   as_tibble() %>%
   mutate(i = 1:n()) %>%
   bind_rows(
+    # add loo_b2
     loo_b2$diagnostics$pareto_k %>% 
       as_tibble() %>%
-      mutate(i = 1:n()) 
-  ) %>%
-  bind_rows(
+      mutate(i = 1:n()),
+    
+    # add loo_b3
     loo_b3$diagnostics$pareto_k %>% 
       as_tibble() %>%
-      mutate(i = 1:n()) 
-  ) %>%
-  bind_rows(
+      mutate(i = 1:n()),
+    
+    # add loo_b4
     loo_b4$diagnostics$pareto_k %>% 
       as_tibble() %>%
       mutate(i = 1:n()) 
   ) %>%
   rename(pareto_k = value) %>%
-  mutate(fit = rep(c("fit b1", "fit b2", "fit b3", "fit b4"), each = n()/4)) %>%
+  mutate(fit = rep(c("fit b1", "fit b2", "fit b3", "fit b4"), each = n() / 4)) %>%
 
   ggplot(aes(x = i, y = pareto_k)) +
   geom_hline(yintercept = c(.5, .7),
              color = "white") +
   geom_point(alpha = .5) +
   scale_y_continuous(breaks = c(0, .5, .7)) +
-  theme(panel.grid = element_blank(),
+  theme(panel.grid   = element_blank(),
         axis.title.x = element_text(face = "italic", family = "Times")) +
     facet_wrap(~fit)
 ```
 
-Oh man, those Student's t models made our world shiny! In a succession from `b2` through `b4`, each model looked better by `pareto_k`. All were way better than the typical Gaussian model, `b1`. While we're at it, we might compare those for with their LOO values.
+Oh man, those Student's $t$ models made our world shiny! In a succession from `b2` through `b4`, each model looked better by `pareto_k`. All were way better than the typical Gaussian model, `b1`. While we're at it, we might compare those for with their LOO values.
 
 ```{r}
 compare_ic(loo_b1, loo_b2, loo_b3, loo_b4)
@@ -524,18 +508,17 @@ That's enough with coefficients, `pareto_k`, and the LOO. Let's get a sense of t
 # These are the values of x we'd like model-implied summaries for
 nd <- tibble(x = seq(from = -4, to = 4, length.out = 50))
 
-# We get the model-implied summaries with a big fitted() object
+# We get the model-implied summaries with a big `fitted()` object
 fitted_bs <- 
-  # for b0
+  # `b0`
   fitted(b0, newdata = nd) %>%
   as_tibble() %>%
-  # for b1
   bind_rows(
+    # add `b1`
     fitted(b1, newdata = nd) %>%
-      as_tibble()
-  ) %>% 
-  # for b3
-  bind_rows(
+      as_tibble(),
+    
+    # add `b3`
     fitted(b3, newdata = nd) %>%
       as_tibble()
   ) %>% 
@@ -545,29 +528,28 @@ fitted_bs <-
   mutate(x = rep(nd %>% pull(), times = 3))
 
 # The plot
-ggplot(data = fitted_bs, 
-       aes(x = x)) +
+fitted_bs %>% 
+  ggplot(aes(x = x)) +
   geom_ribbon(aes(ymin = Q2.5,
                   ymax = Q97.5),
               fill = "grey67") +
   geom_line(aes(y = Estimate),
             color = "grey92") +
   geom_point(data = d %>%
-               bind_rows(o) %>%
-               bind_rows(o) %>%
+               bind_rows(o, o) %>%
                mutate(model = rep(c("b0", "b1", "b3"), each = 100)), 
              aes(x = x, y = y, color = y > 3),
              size = 1, alpha = 3/4) +
-  scale_color_manual(values = c("black", viridis_pal(direction = 1, option = "C")(7)[4])) +
+  scale_color_viridis_d(option = "A", end = 4/7) +
   coord_cartesian(xlim = -3:3, 
                   ylim = -3:5) +
   ylab(NULL) +
-  theme(panel.grid = element_blank(),
+  theme(panel.grid      = element_blank(),
         legend.position = "none") +
   facet_wrap(~model)
 ```
 
-For each subplot, the gray band is the 95% interval band and the overlapping light gray line is the posterior mean. Model `b0`, recall, is our baseline comparison model. This is of the well-behaved no-outlier data, `d`, using the good old Gaussian likelihood. Model `b1` is of the outlier data, `o`, but still using the non-robust Gaussian likelihood. Model `b3` uses a robust Student's t likelihood with *nu* estimated with the fairly narrow gamma(4, 1) prior. For my money, `b3` did a pretty good job.
+For each subplot, the gray band is the 95% interval band and the overlapping light gray line is the posterior mean. Model `b0`, recall, is our baseline comparison model. This is of the well-behaved no-outlier data, `d`, using the good old Gaussian likelihood. Model `b1` is of the outlier data, `o`, but still using the non-robust Gaussian likelihood. Model `b3` uses a robust Student's $t$ likelihood with *nu* estimated with the fairly narrow gamma(4, 1) prior. For my money, `b3` did a pretty good job.
 
 ```{r}
 sessionInfo()
